install .env and create new examples, the pandas library

--- a/readme
+++ b/readme
@@ -3,5 +3,10 @@ This files show some exercises and examples about the Data Sciences. I believe t
 
 En estos archivos se muestran algunos ejercicios y ejemplos sobre las ciencias de datos. Creo en esta teoría y en la práctica. Puedes aprender más rápido.
 
+Temario
+Algebra lineal
+
+Linear Algebra
+
 Ariel Marcelo Diaz
 Software Developer
