--- a/linear algebra/main.ipynb
+++ b/linear algebra/main.ipynb
@@ -2,9 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      " Matriz:\n",
+      " [[8 1 3]\n",
+      " [8 5 6]\n",
+      " [7 9 7]]\n",
+      "B\n",
+      " Matriz:\n",
+      " [[4 3 7]\n",
+      " [9 9 0]\n",
+      " [7 5 8]]\n",
+      "Product\n",
+      " Matriz:\n",
+      " [[ 62  48  80]\n",
+      " [119  99 104]\n",
+      " [158 137 105]]\n",
+      "Product Hadamard\n",
+      " Matriz:\n",
+      " [[32  3 21]\n",
+      " [72 45  0]\n",
+      " [49 45 56]]\n",
+      "Identity\n",
+      " Matriz:\n",
+      " [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "from main import Algebra"
    ]
@@ -17,7 +49,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.2"
   }
  },
